# visualizer

./: Cargo.toml  flake.nix
.cursor/rules/: knowledge.mdc  rust.mdc  style.mdc
examples/: clip_text.rs  polygon.rs  showcase.rs  text_only.rs
src/: app.rs  audio.rs  cli.rs  gfx.rs  intensity_chart.rs  lib.rs  main.rs  shared.rs  ui.rs  utils.rs
src/shaders/: immediate.wgsl  texture.wgsl  texture_uv.wgsl
