[package]
name = "visualizer"
version = "0.1.0"
edition = "2024"

[dependencies]
cpal = "0.16.0"
rustfft = "6.2.0"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0.99"
tracing = "0.1.41"
tracing-subscriber = "0.3"
wgpu = "25"
winit = "0.29"
pollster = "0.3"
bytemuck = { version = "1", features = ["derive"] }
# lyon path+tessellation for 2d shapes
lyon_tessellation = "1"
lyon_path = "1"
lyon_geom = "1"
cosmic-text = "0.14"
glyphon = "0.9.0"
